--- a/ReactMplsMeetup/17May2018.md
+++ b/ReactMplsMeetup/17May2018.md
@@ -1,5 +1,7 @@
 # ReactMpls  - 17 May 2018
 
+<https://www.meetup.com/React-Minneapolis-Meetup/events/248238232/>
+
 * <https://derby-day.firebaseapp.com/>
 * <https://www.approachable.io/>
 * <https://primeacademy.io/>
@@ -10,3 +12,9 @@
 * reactmpls@gmail.com
 * https://reactmpls.slack.com/messages/C2RNFGZ9Q/
 * <http://yeoman.io/generators/>
+* Here's the presentation from tonight: https://drive.google.com/file/d/1xoSV3QJkN9z0GfH0DJzFyGCossRch8n4/view?usp=sharing
+* Here's the code from tonight: https://github.com/LukeSchlangen/react-minneapolis-meetup-may-2018
+* Here's the deployed site (blog post included!) https://react-mpls.firebaseapp.com/
+* Where you can make your first Open Source Pull Request: https://github.com/approachable-io/getting-started
+* Where you can watch me struggle to write code (let me know if you're willing to record your own struggles!) 
+* https://www.youtube.com/channel/UCrG-GQBjBSoPRpXLU1bsx7w
